# checkers

./: CMakeLists.txt  README.md
resources/: resources.qrc
src/: authorizationdialog.cpp  authorizationdialog.h  authorizationdialog.ui  cell.cpp  cell.h  checker.cpp  checker.h  field.cpp  field.h  fieldwidget.cpp  fieldwidget.h  game.cpp  game.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionwidget.cpp  optionwidget.h  selectionwidget.cpp  selectionwidget.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
